actualizacion archivo html

--- a/problema_multicrit.html
+++ b/problema_multicrit.html
@@ -183,9 +183,7 @@ pre code {
 source(&quot;teoriadecision_funciones_multicriterio_diagram.R&quot;,encoding=&quot;UTF-8&quot;)</code></pre>
 <pre><code>## Loading required package: shape</code></pre>
 <pre class="r"><code>source(&quot;teoriadecision_funciones_multicriterio_utiles.R&quot;,encoding=&quot;UTF-8&quot;)</code></pre>
-</div>
-<div id="datos" class="section level1">
-<h1>DATOS</h1>
+<p><em>DATOS</em></p>
 <pre class="r"><code>#Matriz de criterios
 n.criterios &lt;- c(&quot;Beneficio&quot;,&quot;Horas&quot;)
 t_crit &lt;- multicriterio.crea.matrizvaloraciones_mej(c(2),
